// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBase.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationClose.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(false)
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(文字)
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <br />
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮
        </span>
        <div>
          <span>
            x
          </span>
        </div>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <button
    class="t-button t-button--line"
  >
    处理开关事件
  </button>
  <button
    class="t-button t-button--line"
  >
    处理定时关闭事件（3s）
  </button>
  <br />
  <br />
  <br />
</DocumentFragment>
`;

exports[`NotificationContent.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容（字符串）
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div>
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationFooter.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
      >
        <div
          class="t-notification__detail"
        >
          <span
            class="t-notification__detail--item"
          >
            重启
          </span>
          <span
            class="t-notification__detail--item t-is-active"
          >
            查看详情
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationIcon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification "
  >
    <i
      class="t-icon t-icon-more t-size-m"
    />
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义icon
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationOffset.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    偏移的信息
  </button>
</DocumentFragment>
`;

exports[`NotificationPlacement.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    左上角
  </button>
  <button
    class="t-button t-button--line"
  >
    右上角
  </button>
  <br />
  <button
    class="t-button t-button--line"
  >
    左下角
  </button>
  <button
    class="t-button t-button--line"
  >
    右下角
  </button>
</DocumentFragment>
`;

exports[`NotificationSize.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          宽度固定400px
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          文本内容最多支持三行
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条内容为*******************************************************************************
        ***************************************************************************************消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationToggle.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    自由控制关闭时机
  </button>
  <button
    class="t-button t-button--line"
  >
    点击打开多个消息
  </button>
  <button
    class="t-button t-button--line"
  >
    点击关闭多个消息
  </button>
</DocumentFragment>
`;

exports[`NotificationType.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification "
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification "
  >
    <svg
      class="t-icon t-is-info"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8,1.5 C11.5898509,1.5 14.5,4.41014913 14.5,8 C14.5,11.5898509 11.5898509,14.5 8,14.5 C4.41014913,14.5 1.5,11.5898509 1.5,8 C1.5,4.41014913 4.41014913,1.5 8,1.5 Z M8.5,6.5 L6.5,6.5 L6.5,7.5 L7.5,7.5 L7.5,11.5 L9.5,11.5 L9.5,10.5 L8.5,10.5 L8.5,6.5 Z M8.5,4.5 L7.5,4.5 L7.5,5.5 L8.5,5.5 L8.5,4.5 Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification "
  >
    <svg
      class="t-icon t-is-warning"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8,1.5 C11.5898509,1.5 14.5,4.41014913 14.5,8 C14.5,11.5898509 11.5898509,14.5 8,14.5 C4.41014913,14.5 1.5,11.5898509 1.5,8 C1.5,4.41014913 4.41014913,1.5 8,1.5 Z M8.5,6.5 L6.5,6.5 L6.5,7.5 L7.5,7.5 L7.5,11.5 L9.5,11.5 L9.5,10.5 L8.5,10.5 L8.5,6.5 Z M8.5,4.5 L7.5,4.5 L7.5,5.5 L8.5,5.5 L8.5,4.5 Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification "
  >
    <svg
      class="t-icon t-is-success"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8,1.5 C11.5898509,1.5 14.5,4.41014913 14.5,8 C14.5,11.5898509 11.5898509,14.5 8,14.5 C4.41014913,14.5 1.5,11.5898509 1.5,8 C1.5,4.41014913 4.41014913,1.5 8,1.5 Z M10.7947737,5.52481537 L7.25881266,9.05981537 L5.13791944,6.93902893 L4.43081266,7.64613571 L7.25923978,10.4745628 L7.96634656,9.76745605 L11.5018805,6.23192215 L10.7947737,5.52481537 Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification "
  >
    <svg
      class="t-icon t-is-error"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8,1.5 C11.5898509,1.5 14.5,4.41014913 14.5,8 C14.5,11.5898509 11.5898509,14.5 8,14.5 C4.41014913,14.5 1.5,11.5898509 1.5,8 C1.5,4.41014913 4.41014913,1.5 8,1.5 Z M8.5,6.5 L6.5,6.5 L6.5,7.5 L7.5,7.5 L7.5,11.5 L9.5,11.5 L9.5,10.5 L8.5,10.5 L8.5,6.5 Z M8.5,4.5 L7.5,4.5 L7.5,5.5 L8.5,5.5 L8.5,4.5 Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <i
          class="t-icon t-icon-close t-size-m"
        />
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationType4Fn.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    信息
  </button>
  <button
    class="t-button t-button--line"
  >
    成功
  </button>
  <button
    class="t-button t-button--line"
  >
    警告
  </button>
  <button
    class="t-button t-button--line"
  >
    错误
  </button>
</DocumentFragment>
`;
